# hotelos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  FLOWCHART_PROMPT.txt  PSEUDOCODE_FLOWS.txt  README.md  docker-compose.prod.yml  docker-compose.yml
server/auth-service/: Dockerfile  alembic.ini  manage.py  pyproject.toml
server/auth-service/alembic/: env.py
server/auth-service/alembic/versions/: 0001_initial.py  85b7f50501df_add_must_change_password_and_audit_logs.py  99d5566f6afc_add_guest_fields_to_users.py
server/auth-service/src/: main.py
server/auth-service/src/api/: dependencies.py  exceptions.py
server/auth-service/src/api/routers/: audit.py  auth.py  users.py
server/auth-service/src/api/schemas/: auth.py  user.py
server/auth-service/src/core/: broker.py  config.py  constants.py  db.py
server/auth-service/src/core/security/: hash.py  jwt.py
server/auth-service/src/domain/: enums.py  models.py
server/auth-service/src/events/: handlers.py  publisher.py  subscriber.py  topics.py
server/auth-service/src/infra/repositories/: permission_repository.py  user_repository.py
server/auth-service/src/services/: audit.py  auth_service.py
server/reception-service/: alembic.ini  manage.py  pyproject.toml
server/reception-service/alembic/: script.py.mako
server/reception-service/alembic/versions/: 0001_create_schema.py  0002_rooms_and_guests.py  0003_bills.py  0004_orders.py  0005_orders_is_billed.py  0006_guest_dnd_preferences.py  0007_reservations.py  0008_maintenance_projection.py  8e3e8bdec074_add_freshness_score_and_dynamic_price.py  b04f9c7f5203_add_auth_user_id_and_cleaning_requests.py
server/reception-service/src/: main.py
server/reception-service/src/api/: dependencies.py  exceptions.py
server/reception-service/src/api/routers/: guest_portal.py  guests.py  metrics.py  orders.py  reservations.py  (+1 more)
server/reception-service/src/core/: broker.py  config.py
server/reception-service/src/domain/: enums.py  models.py
server/reception-service/src/events/: handlers.py  publisher.py  subscriber.py  topics.py
server/reception-service/src/services/: billing.py  credential_generator.py  freshness.py  order_lifecycle.py  room_assignment.py
server/reception-service/src/tasks/: freshness_decay.py
server/ws-gateway/: Dockerfile  pyproject.toml
server/ws-gateway/src/: config.py  main.py  roles.py
(+222 files in other folders)
