[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelos-auth-service"
version = "0.1.0"
description = "HotelOS authentication & RBAC service"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "click==8.1.7",
  "bcrypt==4.2.0",
  "python-jose[cryptography]==3.3.0",
  "redis==5.2.0",
  "structlog==24.4.0",
]

[project.optional-dependencies]
dev = ["ruff==0.7.4", "black==24.10.0", "pytest==8.3.3", "pytest-asyncio==0.24.0", "httpx==0.27.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
