[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelos-reception-service"
version = "0.1.0"
description = "HotelOS reception service — guests, check-in, check-out, billing, room service orders"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "click==8.1.7",
  "python-jose[cryptography]==3.3.0",
  "redis==5.2.0",
  "structlog==24.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
