[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelos-ws-gateway"
version = "0.1.0"
description = "HotelOS WebSocket gateway — Redis Pub/Sub → browser fan-out"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "websockets==13.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "redis==5.2.0",
  "structlog==24.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
